force-app/main/default/objects/KimbleOne__PurchaseOrderAllocation__c/KimbleOne__PurchaseOrderAllocation__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Allocated Purchase Order</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Purchase Order Allocation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocated Purchase Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>