force-app/main/default/objects/KimbleOne__PurchaseOrderAllocation__c/fields/KimbleOne__DeliveryElement__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DeliveryElement</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Allocated Purchase Orders</relationshipLabel>
    <relationshipName>PurchaseOrderAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>