force-app/main/default/objects/KimbleOne__PurchaseOrderAllocation__c/fields/KimbleOne__InvoicedValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicedValue__c</fullName>
    <label>Invoiced Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>