force-app/main/default/objects/KimbleOne__PurchaseOrderAllocation__c/fields/KimbleOne__PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PurchaseOrder__c</fullName>
    <label>Purchase Order</label>
    <referenceTo>KimbleOne__PurchaseOrder__c</referenceTo>
    <relationshipName>PurchaseOrderAllocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>