force-app/main/default/objects/KimbleOne__PurchaseOrderAllocation__c/fields/KimbleOne__RemainingValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RemainingValue__c</fullName>
    <formula>KimbleOne__AllocatedValue__c -  KimbleOne__InvoicedValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>